tests/Rules/Structure/Fixtures/invalid/area_empty_alt_no_role.html.twig
{# 1 errors #}
<area href="#" alt="">
